task done on positioning

--- a/style.css
+++ b/style.css
@@ -113,3 +113,46 @@ nav ul li button {
   font-size: 130%;
   margin-top: 1.5%;
 }
+.Project__container {
+  max-width: 95%;
+  border: 2px solid blue;
+  margin: 0 auto;
+  margin-top: 2.5%;
+}
+.Project__image img {
+  width: 40%;
+  margin-left: 58%;
+  padding-top: 10%;
+  padding-bottom: 3%;
+}
+
+.Project__image {
+  border: 1px solid red;
+}
+.Project__text {
+  width: 58%;
+  height: 430px;
+  /* border: 1px solid green; */
+  background-color: #f9fbff;
+  position: absolute;
+  top: 6%;
+  left: 6%;
+}
+.section__head {
+  position: relative;
+}
+.Project__text__container p {
+  margin-top: 4%;
+  font-size: 150%;
+}
+.Project__text__container ul {
+  font-size: 130%;
+}
+.Project__text__container h4 {
+  font-size: 150%;
+}
+.Project__text__container {
+  margin-top: -2%;
+  margin-left: 4%;
+  margin-right: 4%;
+}
